# be-energy

./: .gitignore  README.md  pnpm-lock.yaml  turbo.json
apps/contracts/energy_distribution/: Cargo.toml
apps/contracts/energy_distribution/src/: lib.rs
apps/contracts/energy_distribution/test_snapshots/test/: test_add_members_fails_when_paused.1.json  test_add_members_multisig_called_twice.1.json  test_add_members_multisig_success.1.json  test_add_members_percent_mismatch.1.json  test_admin_can_unpause.1.json  test_commitment_overwrite.1.json  test_constructor.1.json  test_enable_privacy.1.json  test_initial_state_not_paused.1.json  test_initialize.1.json  test_is_member_false_for_non_member.1.json  test_member_list_empty_before_init.1.json  test_non_admin_cannot_pause.1.json  test_operations_resume_after_unpause.1.json  test_record_generation_fails_when_paused.1.json  test_record_generation_success.1.json  test_record_private_consumption_member_succeeds.1.json  test_record_private_consumption_non_member_fails.1.json  test_single_member_100_percent.1.json  test_total_generated_accumulates.1.json  test_verify_no_commitment_returns_false.1.json  test_verify_private_consumption_valid.1.json  test_views_before_initialize.1.json
docs/: 1-PLAN.md  2-HOW-IT-WORKS.md  4-ARCHITECTURE.md  9-ARCHITECTURE-MARCH.md  ARCHITECTURE.md  CONTRACTS-REFACTOR.md  CONTRACTS.md  DATA-FLOW.md  HOW-IT-WORKS.md  PLAN.md  RESEARCH.md  ROADMAP.md  defindex-setup.md  marketplace-api-tests.md  testing.md
scripts/: cleanup-empty-coops.ts  integration-test.ts  promote.sh  setup-db.ts  (+1 more)
(+95 files in other folders)
